--- a/configs/helloworld-dev.yml
+++ b/configs/helloworld-dev.yml
@@ -1,2 +1,11 @@
 gyt:
     hello: hahahaha
+spring:
+  profiles: dev
+  application:
+    name: config-client
+  cloud:
+     config:
+       uri: http://localhost:3301
+       label: master
+       profile: dev
